# P1-Labs

./: .gitignore  CMakeLists.txt  README.md
L4/: Zadatak1.c  zadatak2.c
L5/: Zadatak1.c  Zadatak2.c  Zadatak3.c  Zadatak4.c  Zadatak5.c
L6/: Zadatak1.c  Zadatak2.c
stdneb/: stdneb.c  stdneb.h
